api gateway added

--- a/task-service/src/main/resources/application.properties
+++ b/task-service/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.mongodb.uri=mongodb://localhost:27017/theDoerTasksDb
 
 server.port=0
 
+#ensures different instance id to register multiple instance
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}-${random.value}
+
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka
