--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>user-service</module>
         <module>task-service</module>
         <module>discovery-service</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
