added circuit breaker - still debugging an issue

--- a/task-service/src/main/resources/application.properties
+++ b/task-service/src/main/resources/application.properties
@@ -11,4 +11,23 @@ server.port=0
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}-${random.value}
 
-eureka.client.service-url.defaultZone=http://localhost:8080/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Enable health indicator
+resilience4j.circuitbreaker.instances.userService.registerHealthIndicator=true
+
+# Sliding window configuration
+resilience4j.circuitbreaker.instances.userService.slidingWindowSize=2
+resilience4j.circuitbreaker.instances.userService.minimumNumberOfCalls=1
+
+# Failure threshold (percentage)
+resilience4j.circuitbreaker.instances.userService.failureRateThreshold=50
+
+# How long circuit stays OPEN
+resilience4j.circuitbreaker.instances.userService.waitDurationInOpenState=10s
+
+# HALF-OPEN test calls
+resilience4j.circuitbreaker.instances.userService.permittedNumberOfCallsInHalfOpenState=3
+
+management.endpoints.web.exposure.include=health,info,circuitbreakers
+management.endpoint.health.show-details=always
