--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api-gateway
 
-eureka.client.service-url.defaultZone=http://localhost:8080/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 server.port=8181
 logging.level.root=INFO
@@ -20,5 +20,5 @@ spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/api/tasks/**
 
 # discovery service
 spring.cloud.gateway.server.webmvc.routes[2].id=discovery-service
-spring.cloud.gateway.server.webmvc.routes[2].uri=http://localhost:8080
-spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/eureka/web/**
+spring.cloud.gateway.server.webmvc.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/eureka
