--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8080
+server.port=8761
 spring.application.name = discovery-server
 
 # Eureka server not to register itself as a client
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+server.servlet.context-path=/
