--- a/task-service/src/main/resources/application.properties
+++ b/task-service/src/main/resources/application.properties
@@ -14,20 +14,24 @@ eureka.instance.instance-id=${spring.application.name}-${random.value}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Enable health indicator
-resilience4j.circuitbreaker.instances.userService.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.user-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.user-service.event-consumer-buffer-size=10
 
 # Sliding window configuration
-resilience4j.circuitbreaker.instances.userService.slidingWindowSize=2
-resilience4j.circuitbreaker.instances.userService.minimumNumberOfCalls=1
+resilience4j.circuitbreaker.instances.user-service.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.user-service.slidingWindowSize=5
 
 # Failure threshold (percentage)
-resilience4j.circuitbreaker.instances.userService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.user-service.failureRateThreshold=50
 
 # How long circuit stays OPEN
-resilience4j.circuitbreaker.instances.userService.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.user-service.waitDurationInOpenState=5s
 
 # HALF-OPEN test calls
-resilience4j.circuitbreaker.instances.userService.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.user-service.permittedNumberOfCallsInHalfOpenState=3
 
-management.endpoints.web.exposure.include=health,info,circuitbreakers
+resilience4j.circuitbreaker.instances.user-service.automatic-transition-from-open-to-half-open-enabled=true
+
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
